<resources>
    <string name="app_name">Yalla Game</string>
    <string name="start_experience">Start Experience</string>
    <string name="welcome">Welcome to Yalla Game!</string>
    <string name="tagline">Fast and easy way to find \nnew gaming partners.</string>
    <string name="game_tagline">Let us help you find your gaming partners.\n Please select at least 3 games.</string>
    <string name="forget_pass_tagline">Please enter your email so we can \nhelp you recover your password</string>
    <string name="forget_email_tagline">Please enter your username so we can \nhelp you recover your password</string>
    <string name="forget_email">Forget email</string>
    <string name="forget_pass">Forget Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="find">Find</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="or">or</string>
    <string name="continue_social">Continue With Social</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="already_account">Already have an account?</string>
    <string name="sign_up">Sign up!</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="send">Send</string>
    <string name="back_to_login">Back to Login</string>
    <string name="verify_otp_tagline">We just sent the OTP code to your email,\nplease check your email and enter below</string>
    <string name="success_tagline_pass">Good Job! Your password has been \nreset successfully!</string>
    <string name="discovered">We discovered that your email address,\n</string>
    <string name="is_username">is associated with the username\n</string>
    <string name="success">Success</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="next">Next</string>
    <string name="resend_in">Resend in</string>
    <string name="resend_otp">Resend Code</string>
    <string name="reset_pass">Reset Password</string>
    <string name="reset_pass_tagline">Please enter your new password below </string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="by_clicking_on">By clicking on</string>
    <string name="you_agree_to">you agree to the</string>
    <string name="user_agreement">User Agreement</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="and">and</string>
    <string name="back">Back</string>
    <string name="set_avatar">Set Your Avatar</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_country">Select Country</string>
    <string name="select_country_region">Select Country / region</string>
    <string name="select_city">Select city</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="search_hint">Search...</string>
    <string name="confirm">Confirm</string>
    <string name="complete">Complete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>