<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgVuColor"
    tools:context=".startup.ForgetEmailActivity">


    <LinearLayout
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@null"
            android:padding="@dimen/_3sdp"
            android:layout_gravity="center_vertical"
            android:scaleType="centerCrop"
            android:layoutDirection="locale"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="Back"
            android:layout_gravity="center_vertical"
            android:textColor="@color/pinkColor"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/main_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_back"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/forget_email"
            android:textColor="@color/white"
            android:textSize="@dimen/_32sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:gravity="center"
            android:text="@string/forget_email_tagline"
            android:textColor="@color/lightGreyTextColor"
            android:textSize="@dimen/_16sdp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_55sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/rounded_corner_bg_black">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/username"
                android:inputType="text"
                android:textColor="@color/pinkColor"
                android:textColorHint="@color/lightGreyTextColor"
                android:textCursorDrawable="@drawable/pibk_cursor_drawable"
                android:textSize="@dimen/_16sdp" />

        </RelativeLayout>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_find"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/gradient_bg"
                android:scaleType="fitXY"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find"
                android:layout_gravity="center"
                android:textColor="@color/whiteColor"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/success_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_back"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/reset_done_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/success_ic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/success"
            android:textColor="@color/white"
            android:textSize="@dimen/_32sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tagline_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/discovered"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/lightGreyTextColor"
            android:textSize="@dimen/_16sdp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_go_back"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/gradient_bg"
                android:scaleType="fitXY"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_to_login"
                android:layout_gravity="center"
                android:textColor="@color/whiteColor"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>



</RelativeLayout>