<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appColor"
    android:fitsSystemWindows="true"
    tools:context=".startup.GamesActivity">

        <LinearLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@null"
                android:padding="@dimen/_3sdp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerCrop"
                android:layoutDirection="locale"
                android:src="@drawable/back_arrow" />

            <TextView
                android:id="@+id/btn_back_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/back"
                android:layout_gravity="center_vertical"
                android:textColor="@color/pinkColor"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />


        </LinearLayout>
        <TextView
            android:id="@+id/title"
            android:scaleType="centerInside"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_bar"
            android:gravity="center"
            android:text="What games do \nyou like?"
            android:textColor="@color/white"
            android:textSize="@dimen/_32sdp"
            android:textStyle="bold" />
        <LinearLayout
            android:id="@+id/game_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:layout_above="@id/btn_complete"
            android:layout_below="@id/title">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/game_tagline"
                android:textColor="@color/lightGreyTextColor"
                android:textSize="@dimen/_16sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/games_recycler_vu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:scrollbars="none" />

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_complete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="0dp"
            android:gravity="center"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/gradient_bg"
                android:scaleType="fitXY"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complete"
                android:layout_gravity="center"
                android:textColor="@color/whiteColor"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        </com.google.android.material.card.MaterialCardView>

</RelativeLayout>





    <!--<androidx.core.widget.NestedScrollView-->
    <!--    android:id="@+id/scroll_vu"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    android:layout_above="@id/bottom_lay"-->
    <!--    android:layout_below="@id/title"-->
    <!--    android:scrollbars="none">-->

    <!--    <RelativeLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent">-->


    <!--    </RelativeLayout>-->
    <!--</androidx.core.widget.NestedScrollView>-->